# Tainter

./: .gitignore  README.md  env_linux.yml  pyproject.toml
cluster/: .Rhistory  analysis.R
cluster/parameter_analysis_20200626/: output_processing.py  parameter_scan.py  pub_fig3_parameter_analysis.py
cluster/parameter_analysis_20200627/: array_submit.sh  parameter_scan.py  parameter_setup.py  pub_fig3_parameter_analysis.py
cluster/parameter_analysis_20200627_2/: parameter_setup.py  pub_fig3_parameter_analysis.py
cluster/parameter_analysis_20200629/: array_submit.sh  parameter_setup.py  pub_fig3_parameter_analysis.py
cluster/parameter_analysis_20200630/: array_submit.sh  interpolate_wrong_missing.py  output_processing.py  parameter_scan.py  parameter_scan_error.py  parameter_scan_odeint.py  plot_test.py  pub_fig3_parameter_analysis.py  test.py  (+1 more)
scripts/: analysis.ipynb  approximation.py  array_submit.sh  f2_compute_stochastic_model.py  f2_plot_stochastic.py  f3_compute_ensemble.py  f3_organize_ensemble.py  f3_plot_ensemble.py  f3b_plot_trajectories.py  f4_plot_parameter_analysis.py  macroscopic_approximation.py  parameters_cluster.py  plot_cluster.py  process_cluster.py  readme_cluster.md  run.py  run_stochastic_model.py  stochastic_model.py  stochastic_plot.py
tainter/: __init__.py  analysis.ipynb  f2_compute_stochastic_model.py  f2_plot_stochastic.py  f3_compute_ensemble.py  f3_organize_ensemble.py  f3_plot_ensemble.py  f3_plot_ensemble_with_approx.py  f3b_plot_trajectories.py  f4_plot_parameter_analysis.py  macroscopic_approximation.py
(+133 files in other folders)
