[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tainter"
version = "0.1.0"
authors = [
  { name="Florian Schunck", email="fluncki@protonmail.com" },
]
description = "Tainter is a package for that implements a stylized model of Joseph Tainter's theory of societal collapse"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pandas == 2.1.1",
  "tqdm == 4.66.1",
  "matplotlib == 3.8.0",
  "networkx == 3.1",
  "numpy == 1.26.0",
  "matplotlib-label-lines == 0.7.0",
  "scipy == 1.11.3",
  "ipykernel == 6.25.2",
  "jupyterlab"
]

[project.optional-dependencies]
datalad = ["datalad", "datalad-osf"]

[project.urls]
"Homepage" = "https://github.com/flo-schu/tainter"
"Issue Tracker" = "https://github.com/flo-schu/tainter/issues"


[tool.setuptools.packages.find]
include = ["tainter*", "scripts*"]  # ["."] by default